# Facial_recognition_system_with_onnx_arcface

./: README.md  pyproject.toml
src/: align.py  camera.py  detect.py  embed.py  evaluate.py  landmarks.py
